# ---

./: CHANGELOG.md  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Book.h  DictionaryParser.cpp  DictionaryParser.h  FsrsScheduler.cpp  FsrsScheduler.h  TtsEngine.cpp  TtsEngine.h  Word.h  WordModel.cpp  WordModel.h
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/network/: WebDavClient.cpp  WebDavClient.h
src/ui/: DashboardView.cpp  DashboardView.h  LearningChart.cpp  LearningChart.h  MainWindow.cpp  MainWindow.h  PreviewView.cpp  PreviewView.h  SettingsDialog.cpp  SettingsDialog.h  StudyView.cpp  StudyView.h  TestView.cpp  TestView.h  ThemeManager.cpp  ThemeManager.h
